# wabi-sabi

./: .gitignore  .gitmodules  README.md  pyproject.toml
custom-model-training/: pyproject.toml
custom-model-training/src/: 3_chinchilla.ipynb  4_training.ipynb  7_train_debugging.ipynb  model.py  test_tokenizer.py
custom-model-training/src/tinystories/: convert-h5-to-ggml.py  create_dataset.py  train_model.py
distillation/: README.md  pyproject.toml
distillation/src/: collocation.py  generate_logits.py  student.yaml  test_model.py
distillation/src/runs/test1/hf_model/: attention.py  config.json  modeling_mpt.py  norm.py
inference/: README.md  output.txt  prompts.txt
python/: pyproject-poetry.toml
python/src/: 6_improving_training.ipynb  8_eval.ipynb  9_tinystories.ipynb  model.py  rotary_embedding.py  train_model.py
python/src/tokenizer/: tokenizer.json
src/: 0_data.ipynb  1_model.ipynb  2_tokenizer.ipynb  4_training.ipynb  6_improving_training.ipynb  7_train_debugging.ipynb  8_eval.ipynb  __init__.py  model.py  train_model.py
src/huggingface_model/: config.json  tokenizer.json
src/model/: config.json  generation_config.json
src/tinystories/: create_dataset.py  train_model.py  train_tokenizer.py
src/tinystories/tokenizer/: special_tokens_map.json  tokenizer.json
src/tokenizer/: test_tokenizer.py  tokenizer.json  train_tokenizer.py
