[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["John Sungjin Kim <jsjkim00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
datasets = "^2.13.1"
einops = "^0.6.1"
ipykernel = "^6.24.0"
mosaicml = {extras = ["nlp", "tensorboard", "wandb"], version = "^0.15.0"}
torchinfo = "^1.8.0"
python-dotenv = "^1.0.0"
matplotlib = "^3.7.2"
psutil = "^5.9.5"
ipywidgets = "^8.0.7"
deepspeed = "^0.9.5"
torch-tb-profiler = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.277"
pyright = "^1.1.316"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
ignore = ["E501"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

reportMissingTypeStubs = "warning"

reportUnusedImport = "warning"
reportUnusedVariable = "warning"

reportPrivateImportUsage = "none"

reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
